@@ -1,8 +1,9 @@
-AUX spectrum.cfg 4323 RMD160 cb976d122c345034511c621d461aadad0f4e1b1a SHA1 3278fa1e45ef67b33fddd7b01c41f3ad7d1982ae SHA256 6805b1a43bcb2db3f9a44066c5911b3172f0852e7de35371d3f4203e5be8dfcd
-AUX spectrum.confd 225 RMD160 c9396f00deaae74c1f2bbe985dfb857308a11879 SHA1 55a498364612d1f0093a3a2e4c79bd6aaec61b1e SHA256 53f34d4cab5ecb41613afcb42bec62dfbe427c474691c254c4f418bdd5ce0cbd
-AUX spectrum.initd 592 RMD160 f74c8e5b1a35f9362fa3cb13633caff9aa54cc76 SHA1 196671e97455614ed81b0cbd87d5831f15f55fd1 SHA256 80c37c82dcd1b867400de4e23433ec0b822418d2858b441dd464259e650bf27b
+AUX spectrum.cfg 4787 RMD160 ae1ef8916f41a46a8f62376871613b4fbffd02b0 SHA1 b9d0066be2704946a311cd3a1a43fedb8a4ee7a6 SHA256 cb1b3338dbbb71c29d43d9a81499dc7cc0199a8953c688bda5ed8bca5c6dbf33
+AUX spectrum.confd 157 RMD160 dec3aebc84f379e42faf6760dc0524b960541f4c SHA1 7894af53b8aebf457a4d5de81ffee35843563d01 SHA256 5f1c7a7c614ffb15ba64caadd560088cf3a8032f3973489a31f65c89ce286c85
+AUX spectrum.initd 548 RMD160 ea5bbfdec4c71f1e6bbf3ef04b0b0b961803bbee SHA1 2cf0114bb19c22a92bd78e7396419472c4da6d17 SHA256 8e6d6c07ecf14c458abe9ab42d959b333a95a6dc199e0839b8df63bd8b404d01
+AUX spectrum.symlink.cfg 4849 RMD160 ccf40f9cdc2a6fe589ad800afdad80223df38449 SHA1 6898c531f42072a4b33d73254e9119918f7fa89d SHA256 6014ae2cdabab1ff191630b8d0019c9c7db949ea2513cc33d021d6582773cbeb
 DIST spectrum-1.4.4.tar.gz 251279 RMD160 728829637abbbc3b1d2b1a8ac9f2b9fe174d6cfe SHA1 6dae90ce8e9a590330f260c71a64ae8c84497882 SHA256 831fd7f198342b6dc7ce4f631ccfa8b3a4cd5754dfe42987bd5c0c3d2bb6460f
-EBUILD spectrum-1.4.4.ebuild 2418 RMD160 ee11a3ea4e7f3f097da84448705142a0a4bbb86b SHA1 eeceb9a6f4f8e4e90ae1570ec79e4db95def8646 SHA256 3cfa566b9d0af32619d980ad5976e8741fc7000f1b21d613106977b767e4a922
-EBUILD spectrum-9999.ebuild 2388 RMD160 3752322eb06f903870e4f730347e51e68399a5ee SHA1 134efb5d24df6840045089fa849b4d611e553da1 SHA256 16c00085b4f41ca83db0265a3ea13dcc1dffb2a844747a7277fc84622f9ee538
-MISC ChangeLog 527 RMD160 1f87bbddd00db3c0cb09bd3c276e23227337464e SHA1 0d9a103d584dd145f2e35d8f75335c620171fe5a SHA256 e4a4c9f87cb8d19a523cce969348445356112d81e654042de800c59afc214734
+EBUILD spectrum-1.4.4.ebuild 3541 RMD160 8444e0af58a0419bc392d0831e23d8f14424ce99 SHA1 e749aec1afac13beedfe995dbce7ad905c4dbfa4 SHA256 ff8c10c38752f863553eade0bd067ca5fc07a109952c9f4e352f9045b8b1e44a
+EBUILD spectrum-9999.ebuild 3524 RMD160 b2839e598780646b302945c4f04932c283ab1841 SHA1 afe69d50e3996c943f81f5a0ddb6d3feeeaf5183 SHA256 803d3436b4c18c5a7472c149e27ac2f702634bf7f256f98bf80af6e9513ccced
+MISC ChangeLog 740 RMD160 e1f089dff715051e0175b7f6fc4932a5f3370452 SHA1 f28bafed44b11710be15431ccbb46a830495d5ad SHA256 50de4601a777a415a6154a1babdc2aa08cf5b977ce5b3ebd4232ac7c77044e20
 MISC metadata.xml 345 RMD160 08be5a1d94c618f914ba47a3a37187ad47f8b874 SHA1 62e8a527557d1607a80907263ff4f3f14b21380f SHA256 992720606c40a0cdf873a1776cea81e967e0578af4b538008ffb4f2b6a2e819c
