@@ -3,7 +3,7 @@
 enable=1
 
 # one of: aim, facebook, gg, icq, irc, msn, myspace, qq, simple, xmpp, yahoo
-protocol=S2P
+protocol=$filename:protocol
 
 # component ip
 server=127.0.0.1
@@ -13,34 +13,34 @@ server=127.0.0.1
 use_proxy=0
 
 # component JID
-jid=S2P.example.com
+jid=$protocol.example.com
 
 # component secret
 password=secret
 
 # component port
-port=5347
+port=$filename:port
 
-config_interface = /var/run/spectrum/S2P.sock
+config_interface = /var/run/spectrum/$protocol.sock
 
 # IP:port where filetransfer proxy binds to. This has to be public IP.
-#filetransfer_bind_address=192.0.2.1:12345
+#filetransfer_bind_address=192.0.2.1:$port
 
 # IP:port which will be sent in filetransfer request as stream host.
-#filetransfer_public_address=192.0.2.1:12345
+#filetransfer_public_address=192.0.2.1:$port
 
 # admin JIDs - Jabber IDs of transport administrators who have access to admin adhoc commands
 # separated by semicolons
 #admins=admin@example.com;foo@bar.cz
 
 # directory where downloaded files will be saved
-filetransfer_cache=/var/lib/spectrum/S2P/filetransfer_cache
+filetransfer_cache=/var/lib/spectrum/$protocol/filetransfer_cache
 
 # URL used to acces filestransfer_cache directory from the web.
 filetransfer_web=http://example.com/files/
 
 # name of transport (this will appear in service discovery)
-name=My S2P Transport
+name=My $protocol Transport
 
 # default language
 language=en
@@ -70,7 +70,7 @@ only_for_vip=0
 #vip_features = avatars;chatstate;filetransfer
 
 # pid file
-pid_file=/var/run/spectrum/S2P.pid
+pid_file=/var/run/spectrum/$protocol.pid
 
 # require_tls to connect legacy network
 #require_tls=false
@@ -121,7 +121,7 @@ pid_file=/var/run/spectrum/S2P.pid
 
 [logging]
 # log file, needs to be unique for each spectrum instance
-log_file=/var/log/spectrum/S2P.log
+log_file=/var/log/spectrum/$protocol.log
 
 # log areas
 # combination of: xml, purple
@@ -141,11 +141,11 @@ type=sqlite
 #password=password
 # sqlite: set path to database file here
 # mysql: set to name of database
-database=/var/lib/spectrum/S2P/database/S2P.sqlite
+database=/var/lib/spectrum/$protocol/database/$protocol.sqlite
 # table prefix for multiple transport instances sharing the same database
 #prefix=icq_
 
 [purple]
 # avatar, vcard, roster storage
 # needs to be unique for each spectrum instance
-userdir=/var/lib/spectrum/SPECTRUMGEN2PROTOCOL/userdir
+userdir=/var/lib/spectrum/$protocol/userdir
